k8s/apps/auth/openldap/release.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  namespace: auth
  name: openldap
  labels:
    app: openldap
spec:
  selector:
    matchLabels:
      app: openldap
  template:
    metadata:
      labels:
        app: openldap
        np-ingress-controller-web: allow
    spec:
      enableServiceLinks: false
      containers:
        - name: openldap
          image: osixia/openldap:latest
          resources:
            requests:
              memory: 100M
          ports:
            - name: ldap
              containerPort: 389
          volumeMounts:
            - mountPath: /var/lib/ldap
              name: ldap-db
              readOnly: false
            - name: ldap-config
              readOnly: false
              mountPath: /etc/ldap/slapd.d

        - name: phpldapadmin
          image: osixia/phpldapadmin:latest
          resources:
            requests:
              memory: 10M
          ports:
            - name: web
              containerPort: 80
          # login with: cn=admin,dc=droso,dc=io
      volumes:
        - name: ldap-config
          persistentVolumeClaim:
            claimName: ldap-config
        - name: ldap-db
          persistentVolumeClaim:
            claimName: ldap-db
---
apiVersion: v1
kind: Service
metadata:
  name: ldap
  namespace: auth
spec:
  ports:
    - protocol: TCP
      name: ldap
      port: 389
  selector:
    app: openldap
---
apiVersion: v1
kind: Service
metadata:
  name: phpldapadmin
  namespace: auth
spec:
  ports:
    - protocol: TCP
      name: web
      port: 80
  selector:
    app: openldap
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: phpldapadmin
  namespace: auth
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`phpldapadmin.REDACTED`)
      kind: Rule
      services:
        - name: phpldapadmin
          port: 80
  tls:
    secretName: REDACTED-cert
